# omelette-engine

./: .clangd  AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  LICENSE  Mesh.cpp  Mesh.h  Object.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  World.h  branding.blend  branding.blend1  main.cpp  no_abbreviations.h  omelette  omelette_style.h  primitive_generator.cpp  primitive_generator.h  print_helper.h  shaderClass.cpp  shaderClass.h
.cache/clangd/index/: AABB.h.91A186A2F63E2625.idx  Camera.cpp.9AD30B6D71935E79.idx  Camera.h.361014B15115DFB2.idx  EBO.cpp.621FDF56CC1B696F.idx  EBO.h.E82E4016D47FF4E1.idx  Editor.cpp.A96BF073A69C61C4.idx  Editor.h.D081B46283723585.idx  Mesh.cpp.858133294A566DF5.idx  Mesh.h.4C8FD612DA462358.idx  Object.h.DFB9832C356A51AE.idx  VAO.cpp.D5505DD93826A8AD.idx  VAO.h.74599B6D7FD42052.idx  VBO.cpp.B9F91739C3EDCD55.idx  VBO.h.AB14641035A8CB4F.idx  World.h.6F543711BB528D6D.idx  glad.c.CAA7D2C842C1CC00.idx  glad.h.F9320EAE7B8DF65C.idx  imconfig.h.E273A456CCB3C6EE.idx  imgui.cpp.24B2E0F4A566C982.idx  imgui.h.79A2322F628965E6.idx  imgui_demo.cpp.04D9557953887D61.idx  imgui_draw.cpp.A1955F236F2BA31E.idx  imgui_impl_glfw.cpp.3689EC7AC9ED4A0D.idx  imgui_impl_glfw.h.3EA4614E6E40CEF6.idx  imgui_impl_opengl3.cpp.133EE316B616ACD3.idx  imgui_impl_opengl3.h.6560D7007309D455.idx  imgui_impl_opengl3_loader.h.26F6D6ED671DF52E.idx  imgui_internal.h.1FCD26FD5862D607.idx  imgui_tables.cpp.F836826741B07A2E.idx  main.cpp.7685F06BFE77FAE0.idx  (+11 more)
editor/: Editor.cpp  Editor.h  colours.txt
glad/src/: glad.c
shaders/: default.frag  default.vert  light.frag  light.vert
(+1 files in other folders)
